# ma-thesis-impl

./: .dockerignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  .prettierrc.js  .yarnrc.yml  DEPLOYMENT.md  README.md  inference.Dockerfile  package.json  platform.Dockerfile  turbo.json
.husky/: pre-commit
apps/inference/: .env.example  .gitignore  .pylintrc  entrypoint.sh  fly.toml  package.json  pyproject.toml
apps/inference/src/inference/: __init__.py  inference.py  main.py  models.py  parse_article.py  prepare.py  settings.py  utils.py
apps/platform/: .gitignore  analytics.fly.toml  fly.toml  next.config.mjs  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  v1.fly.toml
apps/platform/src/cells/: AdminArticleCell.tsx  ArticleCell.tsx  ArticleContentCell.tsx  Cell.tsx  ParticipantCell.tsx  ProlificCompletionCodeCell.tsx  StatsCell.tsx  WhitelistCell.tsx
apps/platform/src/components/: BiasGauge.tsx
apps/platform/src/layouts/: AdminLayout.tsx  ArticleLayout.tsx  CenterLayout.tsx  ErrorLayout.tsx  LoadingLayout.tsx  MainLayout.tsx  StudyLayout.tsx
apps/platform/src/lib/: create-session.ts  create-tmp-folder.ts  date.ts  export-data-to-local-fs.ts  find-overlap.ts  get-error.ts  get-prolific-completion-url.ts  image-loader.ts  notion-page.ts  progress-maps.ts  progress.ts  tutorial-steps.tsx  unique.ts  warning-toast.ts  (+1 more)
data/: articles.csv  ux_survey_results.csv
evaluation/: Platform_V3_Dataset_Creation_&_Descriptive_Evaluation.ipynb  Platform_V3_Training_&_Evaluation.ipynb  evaluation.ipynb  new-dataset.csv
(+131 files in other folders)
