[tool.poetry]
name = "Inference"
version = "0.1.0"
description = "Inference server"
authors = ["Jerome Wuerf <oss@scharom.de>", "Fabian Schliski <schliski@fim.uni-passau.de>"]
readme = "README.md"
packages = [
     { include = "inference", from = "src" },
]

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
pylint = "^2.15.3"
black = "^22.10.0"
pyright = "^1.1.275"
isort = "^5.10.1"

[tool.pytest.ini_options]
  pythonpath = ["src"]

[tool.poetry.scripts]
  prepare = "src.inference.prepare:prepare"
  inference = "src.inference.main:start"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
torch = { url="https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'" }
trafilatura = "^1.3.0"
transformers = "^4.22.2"
python-dotenv = "^0.21.0"
nltk = "^3.7"
uvicorn = "^0.18.3"
spacy = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
[tool.isort]
profile = "black"
